# cpp_frame_work

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  version.h.in
include/: socket_compat.h
include/lib/common/: config_file.h  exception.h  log_formatter.h  posix_compat.h  util.h
include/prj_exec1/: app.h  signal_handle.h
src/: CMakeLists.txt
src/lib/: CMakeLists.txt
src/lib/common/: CMakeLists.txt
src/lib/common/src/: config_file.cpp  dump_helper.cpp  exception.cpp  log_formatter.cpp  util.cpp
src/prj_exec1/: CMakeLists.txt
src/prj_exec1/src/: app.cpp  main.cpp  signal_handle.cpp
test/: CMakeLists.txt
test/src/: main.cpp
